overflow fix

--- a/css/songs.css
+++ b/css/songs.css
@@ -1,5 +1,6 @@
 body {
     transition-duration: 0.5s;
+    overflow: hidden auto;
 }
 
 h1, h2 {
